plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.4'
	id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(23)
	}
}

repositories {
	mavenCentral()
	maven { url 'https://repo.spring.io/milestone' }
	maven { url 'https://repo.spring.io/snapshot' }
}

configurations {
	all*.exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
	implementation 'org.springframework.boot:spring-boot-starter-web'

	implementation 'org.springframework.boot:spring-boot-starter-aop'
	implementation 'org.slf4j:slf4j-api:2.0.16'
	implementation 'log4j:log4j:1.2.17'
	implementation 'org.slf4j:slf4j-log4j12:1.7.36'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.2'
	testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.10.2'
	testImplementation 'org.junit.jupiter:junit-jupiter-params:5.10.2'

	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server:2.7.3'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.10.2'
	implementation 'com.google.firebase:firebase-admin:9.3.0'
	implementation 'org.springframework.boot:spring-boot-starter-hateoas'
	implementation 'com.microsoft.onnxruntime:onnxruntime:1.16.1'
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	implementation platform("org.springframework.ai:spring-ai-bom:1.0.0-SNAPSHOT")
	implementation 'org.springframework.ai:spring-ai-ollama'

}

tasks.named('test') {
	useJUnitPlatform()
}